infrastructure/addons/perfdash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfdash
  namespace: perfdash
  labels:
    app: perfdash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perfdash
  template:
    metadata:
      labels:
        app: perfdash
      annotations:
        karpenter.sh/do-not-disrupt: "true"
    spec:
      serviceAccountName: perfdash
      nodeSelector:
        karpenter.sh/nodepool: management
      tolerations:
      - key: workload
        value: management
        effect: NoSchedule
      containers:
        - name: perfdash
          image: gcr.io/k8s-staging-perf-tests/perfdash:2.55
          command:
            - /perfdash
            - --www=true
            - --dir=/www/
            - --address=0.0.0.0:8080
            - --builds=100
            - --force-builds
            - --mode=s3
            - --aws-region=us-west-2
            - --configPath=/etc/config/jobs.yaml
            - --logsBucket=$(PERFDASH_LOG_BUCKET)
            - --logsPath=
            - --storageURL=NotSupported
            - --allow-parsers-matching-all-tests=true
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 5
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: perfdash-config
