infrastructure/addons/perfdash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perfdash
  namespace: perfdash
  labels:
    app: perfdash
spec:
  selector:
    app: perfdash
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
